--- a/build.gradle
+++ b/build.gradle
@@ -33,5 +33,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('com.h2database:h2')
+
+	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
